# NCKH-CryptographicAnalysis

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pytest.ini
.agent/rules/: 00-base.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
api/binance_fastapi/: README - binance.md  README.md  example .env  requirements.txt  start.txt
api/vnstock_fastapi/: .gitignore  README.md  example.env  requirements.txt
docs/: api.md  architecture.md  experiment_report.md
docs/sprint-logs/: sprint-1.md
frontend/: Dockerfile  README.md  next.config.js  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chart.tsx  navbar.tsx
infra/nginx/: nginx.conf
infra/postgres/: init.sql
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: backfill.py  seed_db.py
services/inference/: Dockerfile  main.py  model_loader.py  redis_cache.py  requirements.txt
services/ingestion/: Dockerfile  celery_app.py  (+3 more)
shared/: __init__.py  pyproject.toml
shared/config/: settings.py
shared/db/: __init__.py  base.py  mappers.py  models.py  session.py
shared/db/repositories/: __init__.py  market_repo.py
shared/schemas/: __init__.py  ohlcv.py  predict.py
shared/utils/: __init__.py  logging.py  metrics.py  timez.py  timezone.py
tests/: conftest.py  test_db_connection.py  test_mappers.py  test_market_repo.py  test_settings.py
(+23 files in other folders)
