[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared utility library containing models, schemas, and helpers"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "SQLAlchemy[asyncio]>=2.0",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
]

[tool.setuptools.packages.find]
include = ["shared*"]
